src/components/Dashboard/Dashboard.module.scss
@import '../../styles/_variables';
@import '../../styles/_breakpoints';

.Dashboard {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  min-height: 100%;
  position: relative;
  top: 100px;
  background-image: linear-gradient(
    rgba(88, 57, 154, 0),
    rgba(73, 57, 154, 0.3)
  );
  // border: 2px solid red;
  padding-bottom: 100px;
}

.contentWrapper {
  display: flex;
  flex-direction: column;
  // justify-content: center;
  align-items: center;
  margin-top: -100px;
}

.welcomeMessage {
  margin: 4rem auto 2rem;
  padding: 0 2rem 0;
  font-size: 1.5rem;
  width: 100vw;
  text-align: center;
  color: var(--black);
}

.addPostButton {
  text-align: center;
  padding: 0 2rem;
  margin: 4rem auto 4rem;
  border: 2px solid var(--black);
  transition: background-color 0.2s;
  &:hover {
    cursor: pointer;
    background-color: var(--neutral);
  }
}

// #placeholderInvisibleButton {
//   padding-right: .5rem;
//   padding-top: .25rem;
//   padding-left: .5rem;
//   padding-bottom: .25rem;
//   border: none;
//   color: white;
//   background-color: white;
//   opacity: 0;
// }

.addPostButton {
  margin-top: 2rem;
  margin-bottom: 3rem;
  // background-color: red;
}

.buttonText {
  font-family: Nunito;
  font-weight: 600;
  font-size: 1.2rem;
  color: var(--black);
}

.bulletinHeader {
  margin: 0.5rem auto 0.5rem;
  color: var(--black);
  text-align: center;
  max-width: 350px;
}

@include tabletPortrait {
  .bulletinHeader {
    margin: 0.5rem auto 1rem;
  }
}

.bulletinHeaderContainer {
  width: 90%;
  max-width: 1000px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column-reverse;
  height: 100px;
  padding: 0.5rem;
  position: relative;
  // background-color: white;
  // border: 2px solid var(--black);
}

@include tabletPortrait {
  .bulletinHeaderContainer {
    flex-direction: row;
    height: 70px;
  }
}

.legendContainer {
  position: static;
  left: 2rem;
  display: flex;
  flex-direction: row;
  padding-bottom: 0.5rem;
}

@include tabletPortrait {
  .legendContainer {
    position: absolute;
    flex-direction: column;
  }
}

.legendUnit {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  margin: 0 0.5rem;
}

@include tabletPortrait {
  .legendUnit {
    margin: 0;
  }
}

.legendText {
  margin: 0;
}

.requestSquare,
.offerSquare {
  display: inline-block;
  width: 10px;
  height: 10px;
  margin: 0.5rem;
  border-radius: 50%;
}

.offerSquare {
  background-color: var(--dark1);
}

.requestSquare {
  background-color: var(--dark2);
}

.bulletinContainer {
  border: 2px solid var(--black);
  width: 90%;
  // width: 70%;
  // max-width: 1000px;
  margin: 0 auto 4rem;
  // min-height: 300px;
  // max-height: 100%;
  height: 100%;
  background-color: white;
}

@include mobilePortrait {
  .bulletinContainer,
  .bulletinHeaderContainer {
    width: 80%;
    max-width: 1000px;
  }
}

.bulletinColumnHeaders {
  display: flex;
  justify-content: space-between;
  padding: 1rem 2rem;
  border-bottom: 2px solid var(--black);
}

.columnHeader {
  font-weight: 800;
  color: var(--black);
  margin: 0 1rem 0 0;
  text-align: center;
  // border: 1px solid red;
}

.titleHeader {
  width: 360px;
  min-width: 315px;
  text-align: left;
}

@media (max-width: 600px) {
  .titleHeader {
    min-width: 150px;
  }
}

.typeHeader {
  min-width: 70px;
  display: none;
}

@media (min-width: 810px) {
  .typeHeader {
    display: inline-block;
  }
}

.commentsHeader {
  width: 120px;
  display: none;
}

@include tabletLandscape {
  .commentsHeader {
    display: inline;
  }
}

.postedByHeader {
  min-width: 90px;
  display: none;
  margin-right: 1rem;
}

@include tabletPortrait {
  .postedByHeader {
    display: inline-block;
  }
}

.datePostedHeader {
  width: 120px;
  min-width: 52px;
  display: inline-block;
  margin-right: 0;
}

@include tabletLandscape {
  .datePostedHeader {
    margin-right: 1rem;
  }
}

.posted {
  display: none;
}

@include tabletLandscape {
  .posted {
    display: inline-block;
  }
}

